# recomendacao_produtos

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
1_local_setup/: docker-compose.yml  pyproject.toml
2_data_warehouse/: fakestore_get_data.py
2_data_warehouse/recomendacao_projetos/: dbt_project.yml  profiles.yml
2_data_warehouse/recomendacao_projetos/models/: sources.yml
2_data_warehouse/recomendacao_projetos/models/mart/: products_for_embedding.sql  schema.yml
2_data_warehouse/recomendacao_projetos/models/staging/: sources.yml  stg_products.sql  stg_products.yml
3_embeddings/: Dockerfile  build_index.py
3_embeddings/api/: main.py
3_embeddings/artifacts/: nn_model.joblib
4_analytics/: analytics.py
4_embeddings/api/: main.py
4_embeddings/artifacts/: embeddings.npy  meta.csv
tests/: conftest.py  test_api.py
