[project]
name = "1-local-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dbt-core>=1.10.6",
    "dbt-postgres>=1.9.0",
    "duckdb>=1.3.2",
    "faker>=37.5.3",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=5.0.0",
    "sqlalchemy>=2.0.42",
]
