[project]
name = "recomendacao-produtos"
version = "0.2.0"
description = "Sistema de recomendação de produtos com embeddings semânticos e FastAPI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "cachetools>=5.3.0",
  "dbt-core>=1.10.6",
  "dbt-postgres>=1.9.0",
  "duckdb>=1.3.2",
  "fastapi>=0.100.0",
  "httpx>=0.24.0",
  "joblib>=1.3.0",
  "numpy>=2.0.2",
  "pandas>=2.3.1",
  "psycopg2-binary>=2.9.10",
  "python-dotenv>=1.1.1",
  "requests>=2.32.4",
  "scikit-learn>=1.6.1",
  "sentence-transformers>=5.0.0",
  "sqlalchemy>=2.0.42",
  "uvicorn>=0.24.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["../tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
ignore = ["B008", "E501"]
